--- a/NNet/NNetSimu/NNetSimu.rc
+++ b/NNet/NNetSimu/NNetSimu.rc
@@ -41,7 +41,7 @@ IDC_NNET_SIMU_MAIN MENU
     {
         MENUITEM "&Proceed single step", IDM_FORWARD
         MENUITEM "&Run",                 IDM_RUN
-        MENUITEM "&Stop",                IDM_HALT
+        MENUITEM "&Stop",                IDM_STOP
         POPUP    "&Analyze"
         {
             MENUITEM "Find &loops",      IDM_ANALYZE_LOOPS
@@ -148,7 +148,7 @@ LANGUAGE LANG_GERMAN, SUBLANG_GERMAN
 IDC_NNET_SIMU_MAIN ACCELERATORS
 {
     "r",            IDM_RUN,          ASCII
-    "s",            IDM_HALT,         ASCII
+    "s",            IDM_STOP,         ASCII
     "+",            IDM_PLUS,         ASCII
     "-",            IDM_MINUS,        ASCII
     "a",            IDM_SELECT_ALL,   VIRTKEY, CONTROL
