--- a/NNet/NNetSimu/MonitorConfigurations.cnf
+++ b/NNet/NNetSimu/MonitorConfigurations.cnf
@@ -58,3 +58,14 @@ MonitorConfiguration  "WindowConfiguration4.cnf"
 0    # secondary monitor
 0   # end of MonitorConfiguration
 
+MonitorConfiguration  "WindowConfiguration5.cnf"
+1   # monitor number
+0 0 2194 1234   # monitor rectangle
+0 0 2194 1194   # work area rectangle
+1    # primary monitor
+2   # monitor number
+2194 0 4388 1234   # monitor rectangle
+2194 0 4388 1194   # work area rectangle
+0    # secondary monitor
+0   # end of MonitorConfiguration
+
